--- a/index.html
+++ b/index.html
@@ -2,16 +2,10 @@
 <html>
     <head>
         <title>Fashion | Index</title>
-        <style>
-            h1{
-                background-color: darkcyan;
-                color: white;
-                text-align: center;
-                padding: 5px;
-            }
-        </style>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     </head>
-    <body>
-        <h1>Fashion Site</h1>
+    <body class="container-fluid">
+        <h1 class="bg-danger text-white text-center p-2">Fashion Site</h1>
+        <button class="btn btn-primary">Register</button>
     </body>
 </html>
