--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body class="container-fluid">
         <h1 class="bg-danger text-white text-center p-2">Fashion Site</h1>
         <button class="btn btn-primary">Register</button>
+        <button class="btn btn-info">Login</button>
     </body>
 </html>
